view model and route changes

--- a/src/Scss/Common/Common.scss
+++ b/src/Scss/Common/Common.scss
@@ -138,6 +138,15 @@ main-content,
   }
 }
 
+.no-record{
+  text-align: center;
+  padding: 10%;
+}
+
+.no-record-blur{
+  opacity: 0.3;
+}
+
 .modal-custome-footer {
   position: absolute;
   width: 100%;
