--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -3,6 +3,7 @@
 @import "./PageStyle.scss";
 @import "./Common/Index.scss";
 @import "./Rough/index.scss";
-    @import "carbon-components/scss/globals/scss/styles.scss";
+@import "./comman.scss";
+@import "carbon-components/scss/globals/scss/styles.scss";
 $carbon--theme: $carbon--theme--g100;
 @include carbon--theme();
