rough_packet,office_packet

--- a/src/Scss/Common/Common.scss
+++ b/src/Scss/Common/Common.scss
@@ -116,6 +116,10 @@ main-content,
     cursor: pointer;
   }
 
+  #improve-edit {
+    opacity: 0.2;
+  }
+
   .delete-in-table {
     fill: red;
     cursor: pointer;
